# Auto-XYKS

./: .gitignore  Main.py  README.md  pyproject.toml
assets/: strokes.json
src/: Calculator.py  GUI.py  PlayerAgent.py  Recognizer.py
src/utils/: AnalyUtils.py  Config.py  Logger.py
