[tool.poetry]
name = "AutoXYKS"
version = "0.1.0"
description = "Auto play Xiaoyuan Kousuan with OCR"
authors = ["Harry Huang <harryhuang2652@qq.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.8.10"
opencv-python = "~4.10"
numpy = "~1.24"
pyautogui = "~0.9"
pydirectinput = "~1.0"
pytesseract = "~0.3"

[tool.poetry.dev-dependencies]
pyinstaller = "6.8.0"

[[tool.poetry.source]]
name = "PyPI-Tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

[tool.build]
build-dir = "$project$\\build"
entry = "$project$\\Main.py"
log-level = "WARN"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
